buttons close and minimize functionals

--- a/src/index.html
+++ b/src/index.html
@@ -5,35 +5,36 @@
     <meta name="author" content="fufuxii" />
     <title>Chinchillotchi</title>
     <link rel="stylesheet" href="index.css" />
+    <script src="functions.js" defer></script>
   </head>
 
   <body>
     <header>
       <img src="art/main/title.png" id="title" class="title" />
-      <img src="art/main/button_min.png" id="button-min" class="button-min"  />
-      <img src="art/main/button_close.png" id="button-close" class="button-close"/>
+      <img src="art/main/button_min.png" id="buttonMin" class="button-min"  />
+      <img src="art/main/button_close.png" id="buttonClose" class="button-close"/>
     </header>
 
     <main>
-      <div id="chinchilla-info" class="chinchilla-info">
-        <div id="chinchilla-art" class="chinchilla-art">
+      <div id="chinchillaInfo" class="chinchilla-info">
+        <div id="chinchillaArt" class="chinchilla-art">
           <img src="art/chinchilla/chinchilla_default_1.png"/>
         </div>
         
-        <div id="bubble-state" class="bubble-state">
+        <div id="bubbleState" class="bubble-state">
           <img src="art/bubble/bubble_eat_1.png"/>
         </div>
 
-        <div id="life-bar" class="life-bar">
+        <div id="lifeBar" class="life-bar">
           <img src="art/life-bar/life_bar_100.png"/>
         </div>
       </div>
 
-      <div id="buttons-actions" class="buttons-actions">
-        <img src="art/action/button_eat.png" id="button-eat" />
-        <img src="art/action/button_pet.png" id="button-pet" />
-        <img src="art/action/button_sleep.png" id="button-sleep" />
-        <img src="art/action/button_wash.png" id="button-wash" />
+      <div id="buttonsActions" class="buttons-actions">
+        <img src="art/action/button_eat.png" id="buttonEat" />
+        <img src="art/action/button_pet.png" id="buttonPet" />
+        <img src="art/action/button_sleep.png" id="buttonSleep" />
+        <img src="art/action/button_wash.png" id="buttonWash" />
       </div>
     </main>
   </body>
