buttons with hover

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <body>
     <header>
       <img src="art/main/title.png" id="title" class="title" />
-      <img src="art/main/button_min.png" id="buttonMin" class="button-min"  />
-      <img src="art/main/button_close.png" id="buttonClose" class="button-close"/>
+      <img src="art/main/button_min.png" id="buttonMin" class="buttonHeader"  />
+      <img src="art/main/button_close.png" id="buttonClose" class="buttonHeader"/>
     </header>
 
     <main>
@@ -31,10 +31,10 @@
       </div>
 
       <div id="buttonsActions" class="buttons-actions">
-        <img src="art/action/button_eat.png" id="buttonEat" />
-        <img src="art/action/button_pet.png" id="buttonPet" />
-        <img src="art/action/button_sleep.png" id="buttonSleep" />
-        <img src="art/action/button_wash.png" id="buttonWash" />
+        <img src="art/action/button_eat.png" id="buttonEat" class="buttonAction"/>
+        <img src="art/action/button_pet.png" id="buttonPet" class="buttonAction"/>
+        <img src="art/action/button_sleep.png" id="buttonSleep" class="buttonAction"/>
+        <img src="art/action/button_wash.png" id="buttonWash" class="buttonAction"/>
       </div>
     </main>
   </body>
