--- a/src/index.html
+++ b/src/index.html
@@ -16,21 +16,21 @@
     </header>
 
     <main>
-      <div id="chinchillaInfo" class="chinchilla-info">
-        <div id="chinchillaArt" class="chinchilla-art">
+      <div id="chinchillaInfo" class="chinchillaInfo">
+        <div id="chinchillaArt" class="chinchillaArt">
           <img src="art/chinchilla/chinchilla_default_1.png"/>
         </div>
         
-        <div id="bubbleState" class="bubble-state">
+        <div id="bubbleState" class="bubbleState">
           <img src="art/bubble/bubble_eat_1.png"/>
         </div>
 
-        <div id="lifeBar" class="life-bar">
+        <div id="lifeBar" class="lifeBar">
           <img src="art/life-bar/life_bar_100.png"/>
         </div>
       </div>
 
-      <div id="buttonsActions" class="buttons-actions">
+      <div id="buttonsActions" class="gridbButtonsActions">
         <img src="art/action/button_eat.png" id="buttonEat" class="buttonAction"/>
         <img src="art/action/button_pet.png" id="buttonPet" class="buttonAction"/>
         <img src="art/action/button_sleep.png" id="buttonSleep" class="buttonAction"/>
