life bar changes within 2 sec

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta name="author" content="fufuxii" />
     <title>Chinchillotchi</title>
     <link rel="stylesheet" href="index.css" />
-    <script src="functions.js" defer></script>
+    <script src="window-options.js" defer></script>
+     <script src="game.js" defer></script>
   </head>
 
   <body>
@@ -17,16 +18,16 @@
 
     <main>
       <div id="chinchillaInfo" class="chinchillaInfo">
-        <div id="chinchillaArt" class="chinchillaArt">
-          <img src="art/chinchilla/chinchilla_default_1.png"/>
+        <div class="chinchillaArt">
+          <img src="art/chinchilla/chinchilla_default_1.png" id="chinchillaArt"/>
         </div>
         
-        <div id="bubbleState" class="bubbleState">
-          <img src="art/bubble/bubble_eat_1.png"/>
+        <div class="bubbleState">
+          <img src="art/bubble/bubble_eat_1.png" id="bubbleState"/>
         </div>
 
-        <div id="lifeBar" class="lifeBar">
-          <img src="art/life-bar/life_bar_100.png"/>
+        <div class="lifeBar">
+          <img src="art/life-bar/life_bar_100.png" id="lifeBar"/>
         </div>
       </div>
 
