bubble changes when action clicked

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
         </div>
         
         <div class="bubbleState">
-          <img src="art/bubble/bubble_eat_1.png" id="bubbleState"/>
+          <img src="art/bubble/bubble_eat.png" id="bubbleState"/>
         </div>
 
         <div class="lifeBar">
