face incorrect and correct added

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,11 @@
         <div class="chinchillaArt">
           <img src="art/chinchilla/chinchilla_default_1.png" id="chinchillaArt"/>
         </div>
-        
+
+        <div>
+          <img src="art/face/face_correct.png" id="faceAction" style="display:none;"/>
+        </div>
+
         <div class="bubbleState">
           <img src="art/bubble/bubble_eat.png" id="bubbleState"/>
         </div>
